--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <!-- ************** -->
 <h3>属性指令</h3>
-<button type="button" myButton="aaa">按钮</button>
-
+<button type="button" myButton="aaa" [temp]="em">按钮</button>
+<em #em>模板</em>
 <!-- ************** -->
 <h3>结构指令</h3>
 <div>
